Fix Issue with layout on Safari

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -131,9 +131,12 @@
     }
 
     main {
-      position: relative;
       width: 100%;
       height: 100%;
+
+      @media screen and (min-width: $smallScreen) {
+        position: relative;
+      }
     }
 
   }
